# insurance_tracker_be

./: .env.example  README.md  app.db  config.py  pyproject.toml  requirements-pip.txt  seed.py
app/: __init__.py  create_app.py
app/helpers/: __init__.py
app/helpers/DataProcessor/: DataProcessor.py  __init__.py  conf.py
app/helpers/GenerativeAIManager/: GenerativeAIConstructor.py  __init__.py
app/helpers/GenerativeAIManager/resources/: AnthropicResource.py  ResourceInterface.py  __init__.py
app/models/: Company.py  DataProcessed.py  __init__.py
app/models/fields/: JsonField.py  __init__.py
app/routes/: __init__.py  data_processed_routes.py  process_routes.py
app/schemas/: CompanySchema.py  DataProcessedSchema.py  __init__.py
migrations/versions/: 346bb1828736_.py  fd287a7de0e2_.py
postman/: Insurance Tracker.postman_collection.json  Local.postman_environment.json
tests/: conftest.py
tests/resources/: dupixent.json  mocks.py  models.py
tests/unit/helpers/DataProcessor/: test_data_processor.py
tests/unit/helpers/GenerativeAIManager/: test_generative_ai.py
tests/unit/helpers/GenerativeAIManager/resources/: test_anthropic_resource.py
